fixed overlapping optin section covering button

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ p {
 
 .input-group {
     margin-bottom: 1.5rem;
-    position: absolute;
+    position: relative;
 }
 
 
